--- a/css/2viikontehtavat.css
+++ b/css/2viikontehtavat.css
@@ -6,18 +6,18 @@
   margin-right: 10px;
   float:left;
 }
-#yksi{
+#one{
   background-color: orange;
 }
-#kaksi{
+#two{
   background-color: #FFCCCC;
 }
-#kolme{
+#tree{
     background-color: #FFFF99;
 }
-#nelja{
+#four{
     background-color: #B3FFB3;
 }
-#viisi{
+#five{
     background-color: #B3D1FF;
 }
