--- a/css/2viikontehtavat.css
+++ b/css/2viikontehtavat.css
@@ -4,10 +4,11 @@
   padding: 10px;
   margin: 10px;
   margin-right: 10px;
+  background-color: lightgray;
   float:left;
 }
 #one{
-  background-color: orange;
+  background-color: blue;
 }
 #two{
   background-color: #FFCCCC;
