--- a/css/2viikontehtavat.css
+++ b/css/2viikontehtavat.css
@@ -8,7 +8,8 @@
 {
   width: 500px;
   height: 100%;
-  margin-right: 500px;
+  margin-right: auto;
+  margin-left: auto;
   margin-bottom: 20px;
   padding: 50px;
   border-radius: 15px;
