--- a/css/2viikontehtavat.css
+++ b/css/2viikontehtavat.css
@@ -2,7 +2,7 @@
 {
   width: auto;
   height: 100%;
-  background-image: url('/image/code-background.jpg');
+  background-image: url('code-background.jpg');
 }
 .article
 {
