edited .body background-image

--- a/css/2viikontehtavat.css
+++ b/css/2viikontehtavat.css
@@ -4,6 +4,7 @@
   height: 100%;
   background-image: url('code-background.jpg');
   background-size: cover;
+  background-attachment: fixed; 
 }
 .article
 {
