--- a/css/2viikontehtavat.css
+++ b/css/2viikontehtavat.css
@@ -35,3 +35,21 @@
 #five{
     background-color: black;
 }
+#six{
+  background-color: black;
+}
+#seven{
+  background-color: black;
+}
+#eight{
+    background-color: black;
+}
+#nine{
+    background-color: black;
+}
+#ten{
+    background-color: black;
+}
+#eleven{
+    background-color: black;
+}
