--- a/css/2viikon2Tehtavat.css
+++ b/css/2viikon2Tehtavat.css
@@ -1,5 +1,5 @@
 body {
-  background: url("../code-background.jpg") no-repeat center center fixed;
+  background: url("..resources/images/code-background.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
